Storefront: Improve pagination handling.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -47,6 +47,7 @@
         "language-and-region-settings": "Sprache und Region Einstellungen",
         "login": "Anmelden",
         "out-of-stock": "Ausverkauft",
+        "page-n": "Seite {n}",
         "phone-tooltip": "Rufen Sie uns an",
         "phone": "Telefon",
         "price": "Preis",
