--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -48,6 +48,7 @@
         "language-and-region-settings": "Language and Region settings",
         "login": "login",
         "out-of-stock": "Out of Stock",
+        "page-n": "page {n}",
         "phone-tooltip": "Call us",
         "phone": "phone",
         "price": "Price",
