--- a/apps/storefront/src/locales/fr.json
+++ b/apps/storefront/src/locales/fr.json
@@ -42,6 +42,7 @@
         "language-and-region-settings": "Paramètres de langue et de région",
         "login": "connexion",
         "out-of-stock": "En rupture de stock",
+        "page-n": "page {n}",
         "phone-tooltip": "Appelez-nous",
         "phone": "Téléphone",
         "quantity-too-low": "Quantité trop faible",
