--- a/apps/storefront/src/locales/no.json
+++ b/apps/storefront/src/locales/no.json
@@ -31,6 +31,7 @@
         "language-and-region-settings": "Innstillinger for språk og region",
         "login": "logge inn",
         "out-of-stock": "Utsolgt",
+        "page-n": "side {n}",
         "quantity-too-low": "For lav mengde",
         "quantity": "Mengde",
         "increase": "Øke",
