--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -36,6 +36,7 @@
         "language-and-region-settings": "Språk- och regioninställningar",
         "login": "logga in",
         "out-of-stock": "Slutsåld",
+        "page-n": "sida {n}",
         "phone-tooltip": "Ring oss",
         "phone": "telefon",
         "quantity-too-low": "För lågt antal",
