--- a/apps/storefront/src/locales/es.json
+++ b/apps/storefront/src/locales/es.json
@@ -47,6 +47,7 @@
         "language-and-region-settings": "Configuración de Idioma y Región",
         "login": "iniciar sesión",
         "out-of-stock": "Agotado",
+        "page-n": "página {n}",
         "phone-tooltip": "Llámanos",
         "phone": "teléfono",
         "price": "Precio",
