Storefront: Improve SEO.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -29,6 +29,7 @@
         "add-to-cart": "In den Warenkorb",
         "add": "Hinzufügen",
         "added-to-cart": "Hinzugefügt!",
+        "account": "konto",
         "blog": "Blog",
         "buy": "Kaufen",
         "cart-not-ready": "Einen Moment...",
