--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -30,6 +30,7 @@
         "add-to-cart": "Add to Cart",
         "add": "Add",
         "added-to-cart": "Added!",
+        "account": "account",
         "blog": "Blog",
         "buy": "Buy",
         "cart-not-ready": "Hang on...",
