--- a/apps/storefront/src/locales/es.json
+++ b/apps/storefront/src/locales/es.json
@@ -29,6 +29,7 @@
         "add-to-cart": "Agregar al Carrito",
         "add": "Agregar",
         "added-to-cart": "¡Agregado!",
+        "account": "cuenta",
         "blog": "Blog",
         "buy": "Comprar",
         "cart-not-ready": "Espera...",
