--- a/apps/storefront/src/locales/fr.json
+++ b/apps/storefront/src/locales/fr.json
@@ -24,6 +24,7 @@
         "add-to-cart": "Ajouter au panier",
         "add": "Ajouter",
         "added-to-cart": "Ajouté !",
+        "account": "compte",
         "blog": "Blog",
         "buy": "Acheter",
         "cart-not-ready": "Attendez...",
