--- a/apps/storefront/src/locales/no.json
+++ b/apps/storefront/src/locales/no.json
@@ -24,6 +24,7 @@
         "add-to-cart": "Kjøpe",
         "add": "Legg til",
         "added-to-cart": "Lagt til!",
+        "account": "konto",
         "buy": "Kjøp",
         "cart-not-ready": "Vent litt...",
         "cart": "Handlekurv",
