--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -22,6 +22,7 @@
         "add-to-cart": "Köp",
         "add": "Lägg till",
         "added-to-cart": "Tillagd!",
+        "account": "konto",
         "buy": "Köp",
         "cart-not-ready": "En sekund...",
         "cart": "Varukorgen",
