Storefront: Fix i18n string.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -48,7 +48,7 @@
         "language-and-region-settings": "Sprache und Region Einstellungen",
         "login": "Anmelden",
         "out-of-stock": "Ausverkauft",
-        "page-n": "Seite {n}",
+        "page-n": "Seite {0}",
         "phone-tooltip": "Rufen Sie uns an",
         "phone": "Telefon",
         "price": "Preis",
