Storefront: Improve breadcrumbs.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -26,10 +26,10 @@
         "n-items": "{0} Artikel"
     },
     "common": {
+        "account": "konto",
         "add-to-cart": "In den Warenkorb",
         "add": "Hinzufügen",
         "added-to-cart": "Hinzugefügt!",
-        "account": "konto",
         "blog": "Blog",
         "buy": "Kaufen",
         "cart-not-ready": "Einen Moment...",
@@ -47,10 +47,13 @@
         "increase": "Erhöhen",
         "language-and-region-settings": "Sprache und Region Einstellungen",
         "login": "Anmelden",
+        "n-min-read": "{0} min Lesen",
+        "next": "nächste",
         "out-of-stock": "Ausverkauft",
         "page-n": "Seite {0}",
         "phone-tooltip": "Rufen Sie uns an",
         "phone": "Telefon",
+        "previous": "vorherige",
         "price": "Preis",
         "product": "Produkt",
         "quantity-too-low": "Zu geringe Menge",
