--- a/apps/storefront/src/locales/no.json
+++ b/apps/storefront/src/locales/no.json
@@ -21,32 +21,36 @@
         "view-cart": "Se handlekurven din"
     },
     "common": {
+        "account": "konto",
         "add-to-cart": "Kjøpe",
         "add": "Legg til",
         "added-to-cart": "Lagt til!",
-        "account": "konto",
         "buy": "Kjøp",
         "cart-not-ready": "Vent litt...",
         "cart": "Handlekurv",
+        "contact": "Kontakte",
         "countries": "Land",
+        "decrease": "Redusere",
+        "email-tooltip": "Send oss en e-post",
+        "email": "E-post",
+        "increase": "Øke",
         "language-and-region-settings": "Innstillinger for språk og region",
         "login": "logge inn",
+        "n-min-read": "{0} min lesing",
+        "next": "neste",
         "out-of-stock": "Utsolgt",
         "page-n": "side {0}",
+        "phone-tooltip": "Ring oss",
+        "phone": "Telefon",
+        "previous": "forrige",
+        "price": "pris",
+        "product": "produkt",
         "quantity-too-low": "For lav mengde",
         "quantity": "Mengde",
-        "increase": "Øke",
-        "decrease": "Redusere",
         "remove": "Fjern",
         "save-as-csv": "Lagre som CSV",
         "save-as-pdf": "Lagre som PDF",
-        "search": "Søk",
-        "contact": "Kontakte",
-        "email": "E-post",
-        "phone": "Telefon",
-        "email-tooltip": "Send oss en e-post",
-        "phone-tooltip": "Ring oss",
-        "n-min-read": "{0} min lesing"
+        "search": "Søk"
     },
     "product": {
         "add-to-wishlist": "Legg til i ønskelisten",
