--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -27,10 +27,10 @@
     },
     "common": {
         "account-dashboard": "account dashboard",
+        "account": "account",
         "add-to-cart": "Add to Cart",
         "add": "Add",
         "added-to-cart": "Added!",
-        "account": "account",
         "blog": "Blog",
         "buy": "Buy",
         "cart-not-ready": "Hang on...",
@@ -48,12 +48,15 @@
         "increase": "Increase",
         "language-and-region-settings": "Language and Region settings",
         "login": "login",
+        "n-min-read": "{0} min read",
+        "next": "next",
         "out-of-stock": "Out of Stock",
         "page-n": "page {0}",
         "phone-tooltip": "Call us",
         "phone": "phone",
-        "price": "Price",
-        "product": "Product",
+        "previous": "previous",
+        "price": "price",
+        "product": "product",
         "quantity-too-low": "Too Low Quantity",
         "quantity": "Quantity",
         "remove": "Remove",
@@ -65,7 +68,6 @@
         "share-via-email": "Share via Email",
         "share": "Share",
         "size": "Size",
-        "n-min-read": "{0} min read",
         "wishlist": "Wishlist"
     },
     "product": {
